# open-global-health-biosecurity-ai-evals

./: .env.example  .gitignore  HoldingHealth_EvalFramework_Reference_v01.docx  HoldingHealth_EvalFramework_Reference_v01.txt  README.md  claude_code_brief.md  d1_multi_epoch_analysis.py  methodology.md  pyproject.toml  requirements.txt
datasets/: domain1_cultural.json  domain1_cultural_inspect.jsonl  domain2_chw_competency.json  domain2_chw_competency_inspect.jsonl  domain3_fragile_health_systems.json  domain3_fragile_health_systems_inspect.jsonl
logs/multi_epoch_20260317_123616/: 2026-03-17T12-36-19+00-00_cultural-confabulation-eval_3us4nF8U9pjoTJZ89Nn7zt.eval  2026-03-17T12-36-41+00-00_cultural-confabulation-gap-analysis_WaTYo5WMuu5aFvZtWDgcnm.eval  2026-03-17T12-37-00+00-00_cultural-confabulation-eval_ZUchj55uGz7UMNdBGKQffr.eval  2026-03-17T12-37-15+00-00_cultural-confabulation-gap-analysis_6zoH7k3749DtPQMgp7k6S2.eval  (+20 more)
references/: Framework_Reference_v02_Addendum.docx
reports/: D1_v02_findings_2026-04-04.md  D1_v02_multi_epoch_findings_2026-04-05.md
results/: arxiv_claim_structure.md  collaborator_briefing.md  compare_models.py  interrater_reliability_report.md  multi_epoch_stats.csv  v01_evaluation_report.md  v02_domain2_evaluation_report.md  v02_domain2_findings_summary.md  v02_evaluation_report.md  v03_evaluation_report.md  v03_full_framework_report.md
scripts/: analyse_multi_epoch.py  generate_inspect_dataset.py  md_to_pdf.py  run_interrater.py  run_multi_epoch.py
src/global_health_ai_evals/: __init__.py  _registry.py  metadata.py
tests/: conftest.py
(+51 files in other folders)
